nueva actualizacion java y html para poner dinujado en juego

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 	<div id="contenedor">
 		<canvas width="1000px" height="500px" id="lienzo"></canvas>
 		<button id="btnAmpliar" onclick="ampliar()">Ampliar</button>
+
 	</div>
 
 
 
 	<script src="js/script.js"></script>
+	<script src="js/canvas.js"></script>
 </body>
